# kaitai_struct_tests

./: .gitattributes  .gitignore  LICENSE  README.md  aggregate-reports  all-expression  build-compiler  build-formats  build-rust-formats  build-rust-tests  build-tests  ci-all  ci-c  ci-construct  ci-construct2  ci-construct3  ci-cpp_stl  ci-cpp_stl_11  ci-cpp_stl_98  ci-csharp  ci-go  ci-graphviz  ci-java  ci-javascript  ci-julia  ci-lua  ci-nim  ci-perl  ci-php  ci-python  ci-python2  ci-python3  ci-ruby  ci-rust  ci-zig  compile-all  config  docker-ci  kst-adoption-report  link-cpp_stl  (+44 more)
_construct/: bits_byte_aligned.py  bits_enum.py  bits_simple.py  buffered_struct.py  bytes_pad_term.py  docstrings.py  docstrings_docref.py  enum_0.py  enum_1.py  enum_fancy.py  enum_for_unknown_id.py  enum_if.py  enum_negative.py  enum_of_value_inst.py  enum_to_i.py  eof_exception_bytes.py  eof_exception_u4.py  expr_0.py  expr_1.py  expr_2.py  expr_3.py  expr_bytes_cmp.py  expr_io_eof.py  expr_io_pos.py  expr_mod.py  fixed_contents.py  float_to_i.py  floating_points.py  hello_world.py  if_instances.py  if_struct.py  if_values.py  index_sizes.py  index_to_param_eos.py  index_to_param_expr.py  index_to_param_until.py  instance_io_user.py  nested_types.py  nested_types2.py  position_in_seq.py  (+38 more)
aggregate/: README.md  aggregate  boost_test_parser.rb  build_fail_parser.rb  build_failed_parser.rb  compare_with_prev  convert_to_json  junit_xml_parser.rb  make_fail_parser.rb  nunit_xml_parser.rb  report.html.erb  report_footer.html.erb  report_header.html.erb  report_table.html.erb  rspec_json_parser.rb  test_parser.rb  test_result.rb  text_list_parser.rb  translator_xml_parser.rb  trx_xml_parser.rb  valgrind_xml_parser.rb  zig_json_parser.rb
builder/: README.md  c_builder.rb  cpp_builder.rb  csharp_async_builder.rb  csharp_builder.rb  java_builder.rb  nim_builder.rb  partial_builder.rb  rust_builder.rb  shellconfig.rb  zig_builder.rb
doc/: check_if_up_to_date  compile  display_coverage  test_coverage_order.dot
formats/: bcd_user_type_be.ksy  bcd_user_type_le.ksy  bits_byte_aligned.ksy  bits_byte_aligned_eof_be.ksy  bits_byte_aligned_eof_le.ksy  bits_enum.ksy  bits_signed_b32_le.ksy  bits_signed_b64_le.ksy  bits_simple.ksy  bytes_eos_pad_term.ksy  bytes_pad_term_empty.ksy  bytes_pad_term_equal.ksy  bytes_pad_term_roundtrip.ksy  bytes_pad_term_zero_size.ksy  cast_to_imported.ksy  cast_to_imported2.ksy  combine_enum.ksy  debug_0.ksy  debug_array_user_current_excluded.ksy  debug_array_user_eof_exception.ksy  debug_enum_name.ksy  debug_params_enum.ksy  default_endian_expr_both.ksy  (+209 more)
spec/c/: .gitignore  CMakeLists.txt  main.cpp
spec/c/prereq/: custom.c  custom_fx.h  custom_fx_no_args.h  my_custom_fx.h  operators.h
spec/cpp_stl/: CMakeLists.txt  main.cpp  test_bcd_user_type_be.cpp  test_bcd_user_type_le.cpp  test_bits_byte_aligned.cpp  test_bits_simple.cpp  test_buffered_struct.cpp  test_bytes_pad_term.cpp  test_cast_nested.cpp  test_cast_to_top.cpp  test_default_big_endian.cpp  test_default_endian_expr_inherited.cpp  test_default_endian_expr_is_be.cpp  test_default_endian_expr_is_le.cpp  test_default_endian_mod.cpp  test_docstrings.cpp  test_docstrings_docref.cpp  test_enum_1.cpp  test_enum_deep.cpp  test_enum_if.cpp  test_enum_negative.cpp  test_enum_of_value_inst.cpp  test_enum_to_i.cpp  test_expr_0.cpp  test_expr_1.cpp  test_expr_2.cpp  test_expr_3.cpp  test_expr_array.cpp  test_expr_bytes_cmp.cpp  test_expr_enum.cpp  test_expr_io_pos.cpp  test_expr_mod.cpp  test_fixed_contents.cpp  test_fixed_struct.cpp  test_float_to_i.cpp  test_floating_points.cpp  test_hello_world.cpp  test_if_struct.cpp  test_if_values.cpp  test_index_sizes.cpp  (+70 more)
spec/cpp_stl/prereq/: my_custom_fx.h
spec/cpp_stl_11/: CMakeLists.txt  test_bcd_user_type_le.cpp  test_bits_byte_aligned.cpp  test_bits_enum.cpp  test_bits_seq_endian_combo.cpp  test_bits_signed_b64_le.cpp  test_bits_signed_shift_b64_le.cpp  test_bits_simple.cpp  test_bits_simple_le.cpp  test_bits_unaligned_b32_le.cpp  test_bits_unaligned_b64_be.cpp  test_buffered_struct.cpp  test_bytes_pad_term.cpp  test_cast_to_imported.cpp  test_cast_to_top.cpp  test_combine_bool.cpp  test_combine_bytes.cpp  test_combine_str.cpp  test_debug_0.cpp  test_debug_array_user.cpp  test_debug_enum_name.cpp  test_debug_switch_user.cpp  test_default_bit_endian_mod.cpp  test_default_endian_expr_exception.cpp  test_default_endian_expr_inherited.cpp  test_default_endian_expr_is_be.cpp  test_default_endian_mod.cpp  test_docstrings.cpp  test_docstrings_docref.cpp  test_docstrings_docref_multi.cpp  test_enum_0.cpp  test_enum_1.cpp  test_enum_deep_literals.cpp  test_enum_import.cpp  test_enum_int_range_s.cpp  test_enum_int_range_u.cpp  test_enum_invalid.cpp  test_enum_long_range_u.cpp  test_enum_negative.cpp  test_enum_of_value_inst.cpp  (+161 more)
spec/cpp_stl_11/prereq/: custom_fx.cpp  custom_fx_no_args.cpp  my_custom_fx.cpp
spec/cpp_stl_98/: CMakeLists.txt  helpers.h  main.cpp  test_bcd_user_type_be.cpp  test_bits_byte_aligned.cpp  test_bits_enum.cpp  test_bits_shift_by_b32_le.cpp  test_bits_shift_by_b64_le.cpp  test_bits_signed_b32_le.cpp  test_bits_signed_res_b32_be.cpp  test_bits_signed_res_b32_le.cpp  test_bits_signed_shift_b32_le.cpp  test_bits_simple.cpp  test_bits_unaligned_b32_be.cpp  test_bits_unaligned_b64_le.cpp  test_buffered_struct.cpp  test_cast_nested.cpp  test_cast_to_imported.cpp  test_cast_to_top.cpp  test_combine_enum.cpp  test_debug_array_user.cpp  test_debug_array_user_current_excluded.cpp  test_debug_array_user_eof_exception.cpp  test_debug_enum_name.cpp  test_debug_switch_user.cpp  test_default_big_endian.cpp  test_default_endian_expr_exception.cpp  test_default_endian_expr_is_be.cpp  test_default_endian_expr_is_le.cpp  test_docstrings.cpp  test_docstrings_docref_multi.cpp  test_enum_0.cpp  test_enum_1.cpp  test_enum_deep.cpp  test_enum_deep_literals.cpp  test_enum_fancy.cpp  test_enum_for_unknown_id.cpp  test_enum_if.cpp  test_enum_import.cpp  test_enum_import_literals.cpp  (+163 more)
spec/cpp_stl_98/cmake/: FindIconv.cmake
spec/cpp_stl_98/prereq/: custom_fx.h  custom_fx_no_args.h
(+6603 files in other folders)
